# plotlablib

./: .ci_pipeline  .dockerignore  .env  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  ci.env  plotlablib.mk
.github/workflows/: ci.yaml
files/: plotlab_server_entrypoint.sh  plotlab_server_plot_recorder.sh  requirements.alpine3.14.system  requirements.plotlablib.ubuntu20.04.system  requirements.ubuntu20.04.runtime.system  requirements.ubuntu20.04.system
files/.config/i3/: config  config.default
plotlablib/: CMakeLists.txt  README.md  build.sh
plotlablib/cmake/: PackagingInstallTargets.cmake
plotlablib/include/plotlablib/: afigurestub.h  dummyfigure.h  figurestubzmq.h  plcommands.h  zmqobjectprovider.h  zmqobjectsink.h
